style.css
/* ===========================
   GLOBAL STYLES
=========================== */

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

body{
    font-family:Arial, Helvetica, sans-serif;
}


/* ===========================
   NAVBAR (MOBILE FIRST)
=========================== */

.navbar{

    width:100%;

    display:flex;

    justify-content:space-between;

    align-items:center;

    padding:18px 8%;

    background:#0f172a;

    position:relative;

}

/* Logo */

.logo a{

    color: #f1f5f9;

    text-decoration:none;

    font-size:1.4rem;

    font-weight:bold;

}

/* Hamburger */

.hamburger{
    color: #f1f5f9;

    font-size:1.8rem;

    cursor:pointer;

}

/* Navigation hidden on mobile */

.nav-links{

    display:none;

    list-style:none;

}

/* ====================================
            HERO SECTION
==================================== */

.hero{

    display:flex;

    flex-direction:column;

    justify-content:center;

    align-items:center;

    gap:40px;

    min-height:90vh;

    padding:70px 8%;

    background:
    linear-gradient(
    135deg,
    #0F172A 10%,
    #16233d 60%,
    rgba(34,211,238,.18) 100%);

}

/* Hero Text */

.hero-content{

    text-align:center;

    color:#F1F5F9;

}

.intro{

    color:#22D3EE;

    font-size:1rem;

    margin-bottom:15px;

    letter-spacing:2px;

}

.hero-content h1{

    font-size:2.5rem;

    line-height:1.2;

    margin-bottom:20px;

}

.hero-text{

    max-width:600px;

    line-height:1.8;

    margin-bottom:35px;

    color:#d7dee8;

}

/* CTA */

.hero-btn{

    display:inline-block;

    text-decoration:none;

    background:#22D3EE;

    color:#0F172A;

    padding:15px 35px;

    border-radius:8px;

    font-weight:bold;

    transition:.3s;

}

.hero-btn:hover{

    background:#67E8F9;

    transform:translateY(-3px);

}

/* Hero Image */

.hero-image{

    display:flex;

    justify-content:center;

}

.hero-image img{

    width:280px;

    height:280px;

    object-fit:cover;

    border-radius:50%;

    border:5px solid #22D3EE;

    box-shadow:0 0 35px rgba(34,211,238,.35);

}
/* ====================================
            ABOUT SECTION
==================================== */

.about{

    display:flex;

    flex-direction:column;

    gap:40px;

    align-items:center;

    padding:80px 8%;

    background:#0F172A;

}

/* Image */

.about-image{

    width:100%;

    display:flex;

    justify-content:center;

}

.about-image img{

    width:100%;

    max-width:350px;

    border-radius:20px;

    border:4px solid #22D3EE;

    object-fit:cover;

    box-shadow:0 0 30px rgba(34,211,238,.25);

}

/* Text */

.about-content{

    color:#F1F5F9;

}

.about-content h2{

    font-size:2.3rem;

    color:#22D3EE;

    margin-bottom:25px;

}

.about-content p{

    line-height:1.9;

    font-size:1rem;

    color:#d8e2ec;

}
/* ====================================
            SKILLS SECTION
==================================== */

.skills{

    background:#0F172A;

    padding:80px 8%;

}

/* Heading */

.skills-heading{

    text-align:center;

    margin-bottom:60px;

}

.skills-heading h2{

    color:#22D3EE;

    font-size:2.5rem;

    margin-bottom:15px;

}

.skills-heading p{

    color:#CBD5E1;

    max-width:650px;

    margin:auto;

    line-height:1.8;

}

/* ============================
        GRID LAYOUT
============================ */

.skills-grid{

    display:grid;

    grid-template-columns:1fr;

    gap:30px;

}

/* ============================
            CARD
============================ */

.skill-card{

    background:#16233d;

    padding:35px;

    border-radius:18px;

    border:2px solid transparent;

    transition:0.35s ease;

    cursor:pointer;

}

.skill-card h3{

    color:#22D3EE;

    margin-bottom:20px;

    font-size:1.5rem;

}

.skill-card p{

    color:#CBD5E1;

    line-height:1.8;

}

/* Hover Effect */

.skill-card:hover{

    transform:translateY(-12px);

    border:2px solid #22D3EE;

    box-shadow:0 15px 35px rgba(34,211,238,.25);

}
/* ====================================
            PROJECT SECTION
==================================== */

.projects{

    background:#0F172A;

    padding:90px 8%;

    color: #CBD5E1;

}

/* Grid */

.projects-grid{

    display:grid;

    grid-template-columns:1fr;

    gap:35px;

}

/* Card */

.project-card{

    background:#172554;

    border-radius:18px;

    overflow:hidden;

    transition:.4s;

    border:2px solid transparent;

}

/* Image */

.project-image{

    overflow:hidden;

}

.project-image img{

    width:100%;

    height:240px;

    object-fit:cover;

    transition:.5s;

}

/* Content */

.project-content{

    padding:30px;

}

.project-content h3{

    color:#F1F5F9;

    margin-bottom:15px;

    font-size:1.5rem;

}

.project-content p{

    color:#d8e2ec;

    line-height:1.8;

    margin-bottom:20px;

}

.project-content span{

    color:#22D3EE;

    font-weight:bold;

}

/* Hover */

.project-card:hover{

    transform:translateY(-10px);

    border-color:#22D3EE;

    box-shadow:0 15px 35px rgba(34,211,238,.25);

}

.project-card:hover img{

    transform:scale(1.08);

}
/* ====================================
            CONTACT SECTION
==================================== */

.contact{

    background:#0F172A;

    padding:100px 8%;

    color: #CBD5E1;

}

/* Layout */

.contact-container{

    display:flex;

    flex-direction:column;

    gap:50px;

}

/* Contact Information */

.contact-info{

    color:#F1F5F9;

}

.contact-info h3{

    font-size:2rem;

    color:#22D3EE;

    margin-bottom:20px;

}

.contact-info p{

    line-height:1.8;

    color:#f1f5f9;

    margin-bottom:30px;

}

.info-box{

    margin-bottom:25px;

}

.info-box h4{

    color:#22D3EE;

    margin-bottom:8px;

}

/* Contact Form */

.contact-form{

    background:#172554;

    padding:35px;

    border-radius:18px;

}

.form-group{

    display:flex;

    flex-direction:column;

    margin-bottom:22px;

}

.form-group label{

    color:#F1F5F9;

    margin-bottom:8px;

    font-weight:600;

}

.form-group input,

.form-group textarea{

    padding:15px;

    background:#0F172A;

    border:2px solid #334155;

    border-radius:10px;

    color:#F1F5F9;

    font-size:1rem;

    outline:none;

    transition:.3s;

}

.form-group input:focus,

.form-group textarea:focus{

    border-color:#22D3EE;

    box-shadow:0 0 10px rgba(34,211,238,.25);

}

.form-group textarea{

    resize:vertical;

}

/* Button */

.submit-btn{

    width:100%;

    padding:16px;

    border:none;

    border-radius:10px;

    background:#22D3EE;

    color:#0F172A;

    font-size:1rem;

    font-weight:bold;

    cursor:pointer;

    transition:.3s;

}

.submit-btn:hover{

    background:#67E8F9;

    transform:translateY(-3px);

}
/* ====================================
                FOOTER
==================================== */

.footer{

    background:#0F172A;

    border-top:1px solid rgba(255,255,255,.08);

    padding:70px 8% 30px;

}

/* Layout */

.footer-container{

    display:grid;

    grid-template-columns:1fr;

    gap:50px;

}

/* Logo */

.footer-logo h2{

    color:#22D3EE;

    margin-bottom:15px;

}

.footer-logo p{

    color:#d8e2ec;

    line-height:1.8;

}

/* Footer Titles */

.footer-social h3,

.footer-links h3{

    color:#F1F5F9;

    margin-bottom:20px;

}

/* Icons */

.social-icons{

    display:flex;

    gap:18px;

    flex-wrap:wrap;

}

.social-icons a{

    width:50px;

    height:50px;

    border-radius:50%;

    background:#172554;

    color:#22D3EE;

    display:flex;

    justify-content:center;

    align-items:center;

    font-size:1.3rem;

    text-decoration:none;

    transition:.35s;

}

.social-icons a:hover{

    background:#22D3EE;

    color:#0F172A;

    transform:translateY(-6px);

}

/* Quick Links */

.footer-links ul{

    list-style:none;

}

.footer-links li{

    margin-bottom:15px;

}

.footer-links a{

    color:#d8e2ec;

    text-decoration:none;

    transition:.3s;

}

.footer-links a:hover{

    color:#22D3EE;

    padding-left:8px;

}

/* Bottom */

.footer-bottom{

    margin-top:60px;

    padding-top:30px;

    border-top:1px solid rgba(255,255,255,.08);

    display:flex;

    flex-direction:column;

    align-items:center;

    gap:20px;

    text-align:center;

}

.footer-bottom p{

    color:#94A3B8;

}

/* Back To Top */

.back-top{

    text-decoration:none;

    color:#22D3EE;

    font-weight:bold;

    transition:.3s;

}

.back-top:hover{

    color:#67E8F9;

}








/* ===========================
   DESKTOP VIEW
=========================== */

@media(min-width:992px){

    /* Hide Hamburger */

    .hamburger{

        display:none;

    }

    /* Show Navigation */

    .nav-links{

        display:flex;

        align-items:center;

        gap:35px;

    }

    .nav-links li{

        list-style:none;

        position:relative;

    }

    .nav-links li a{

        color:white;

        text-decoration:none;

        font-size:1rem;

        transition:.3s;

    }

    .nav-links li a:hover{

        color:#38bdf8;

    }


    /* ===========================
       DROPDOWN
    =========================== */

    .dropdown-menu{

        display:none;

        position:absolute;

        top:40px;

        left:0;

        background:#111827;

        width:190px;

        border-radius:8px;

        overflow:hidden;

    }

    .dropdown-menu li{

        width:100%;

    }

    .dropdown-menu li a{

        display:block;

        padding:14px;

    }

    .dropdown-menu li a:hover{

        background:#374151;

        color:white;

    }

    /* Show dropdown */

    .dropdown:hover .dropdown-menu{

        display:block;

    }

}
/* ====================================
        DESKTOP RESPONSIVENESS
==================================== */

@media(min-width:992px){

.hero{

    flex-direction:row;

    justify-content:space-between;

    align-items:center;

}

.hero-content{

    flex:1;

    text-align:left;

}

.hero-content h1{

    font-size:4rem;

}

.hero-text{

    max-width:600px;

}

.hero-image{

    flex:1;

    justify-content:flex-end;

}

.hero-image img{

    width:420px;

    height:420px;

}

}
/* ===========================
      DESKTOP VIEW
=========================== */

@media(min-width:992px){

.about{

    flex-direction:row;

    justify-content:space-between;

    align-items:center;

    gap:70px;

}

.about-image{

    flex:1;

    justify-content:flex-start;

}

.about-content{

    flex:1.4;

}

.about-content h2{

    font-size:3rem;

}

.about-content p{

    font-size:1.1rem;

}

}
/* ============================
      TABLET
============================ */

@media(min-width:768px){

.skills-grid{

    grid-template-columns:repeat(2,1fr);

}

}

/* ============================
      DESKTOP
============================ */

@media(min-width:992px){

.skills-grid{

    grid-template-columns:repeat(4,1fr);

}

.skills-heading h2{

    font-size:3rem;

}

}
/* ===========================
        TABLET
=========================== */

@media(min-width:768px){

.projects-grid{

    grid-template-columns:repeat(2,1fr);

}

}

/* ===========================
        DESKTOP
=========================== */

@media(min-width:1200px){

.projects-grid{

    grid-template-columns:repeat(2,1fr);

}

}
/* ===========================
        DESKTOP
=========================== */

@media(min-width:992px){

.contact-container{

    display:grid;

    grid-template-columns:1fr 1.3fr;

    gap:70px;

    align-items:start;

}

}
/* ==========================
        DESKTOP
========================== */

@media(min-width:768px){

.footer-container{

    grid-template-columns:2fr 1fr 1fr;

    align-items:start;

}

.footer-bottom{

    flex-direction:row;

    justify-content:space-between;

}

}

